# serializer version: 1
# name: TestResponsesCount.test_responses_count
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(JSONExtractRaw(properties, '$survey_id'), '^"|"$', '') as survey_id,
         count()
  FROM events
  WHERE team_id = 99999
    AND event = 'survey sent'
    AND timestamp >= '2024-01-21 14:40:09'
    AND uuid IN
      (SELECT argMax(uuid, timestamp)
       FROM events
       WHERE team_id = 99999
         AND timestamp >= '2024-01-21 14:40:09'
         AND event = 'survey sent'
       GROUP BY replaceRegexpAll(JSONExtractRaw(properties, '$survey_id'), '^"|"$', ''),
                CASE
                    WHEN COALESCE(replaceRegexpAll(JSONExtractRaw(properties, '$survey_submission_id'), '^"|"$', ''), '') = '' THEN toString(uuid)
                    ELSE replaceRegexpAll(JSONExtractRaw(properties, '$survey_submission_id'), '^"|"$', '')
                END)
  GROUP BY survey_id
  '''
# ---
# name: TestResponsesCount.test_responses_count_only_after_first_survey_started
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(JSONExtractRaw(properties, '$survey_id'), '^"|"$', '') as survey_id,
         count()
  FROM events
  WHERE team_id = 99999
    AND event = 'survey sent'
    AND timestamp >= '2024-04-25 14:40:09'
    AND uuid IN
      (SELECT argMax(uuid, timestamp)
       FROM events
       WHERE team_id = 99999
         AND timestamp >= '2024-04-25 14:40:09'
         AND event = 'survey sent'
       GROUP BY replaceRegexpAll(JSONExtractRaw(properties, '$survey_id'), '^"|"$', ''),
                CASE
                    WHEN COALESCE(replaceRegexpAll(JSONExtractRaw(properties, '$survey_submission_id'), '^"|"$', ''), '') = '' THEN toString(uuid)
                    ELSE replaceRegexpAll(JSONExtractRaw(properties, '$survey_submission_id'), '^"|"$', '')
                END)
  GROUP BY survey_id
  '''
# ---
# name: TestResponsesCount.test_responses_count_with_partial_responses
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(JSONExtractRaw(properties, '$survey_id'), '^"|"$', '') as survey_id,
         count()
  FROM events
  WHERE team_id = 99999
    AND event = 'survey sent'
    AND timestamp >= '2024-06-10 11:00:00'
    AND uuid IN
      (SELECT argMax(uuid, timestamp)
       FROM events
       WHERE team_id = 99999
         AND timestamp >= '2024-06-10 11:00:00'
         AND event = 'survey sent'
       GROUP BY replaceRegexpAll(JSONExtractRaw(properties, '$survey_id'), '^"|"$', ''),
                CASE
                    WHEN COALESCE(replaceRegexpAll(JSONExtractRaw(properties, '$survey_submission_id'), '^"|"$', ''), '') = '' THEN toString(uuid)
                    ELSE replaceRegexpAll(JSONExtractRaw(properties, '$survey_submission_id'), '^"|"$', '')
                END)
  GROUP BY survey_id
  '''
# ---
